Rename image file from vector.png to Vector.png

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                        <h3>NGN</h3> 
                     </div>
                     <div>
-                       <img src="images/vector.png">
+                       <img src="images/Vector.png">
                     </div>
                 </div>
                 <div>
